modificacoes de estudo

--- a/CursoJS/exercicios-js/css1/float.html
+++ b/CursoJS/exercicios-js/css1/float.html
@@ -17,16 +17,17 @@
         .c2 {
             background-color: green;
             clear: right;
+            float: left;
         }
         
         .c3 {
             background-color: blue;
-            float: right;
+            clear: both;
         }
 
         .c4 {
             background-color: orange;
-            clear: right;
+            float: right;
         }
 
         div {
