--- a/CursoJS/exercicios-js/dom/modificandoHTML1.html
+++ b/CursoJS/exercicios-js/dom/modificandoHTML1.html
@@ -9,7 +9,31 @@
 
 <body class='conteudo exercicio'>
     <script>
-        // ...
+        const body = document.querySelector('body') //criando elemento do tipo body
+ 
+        const div1 = document.createElement('div') // criar um elemento, nesse caso uma div
+        div1.classList.add('destaque') // criar um classe
+        div1.innerHTML = 'Primeiro' // passando valor para o elemento
+
+        const div2 = document.createElement('div')
+        div2.setAttribute('wm-attribute', 'valor')
+        div2.innerHTML = 'Segundo'
+
+        const p = document.createElement('p')
+        p.innerHTML = 'Terceiro'
+        const div3 = document.createElement('div')
+        div3.appendChild(p)
+
+        body.appendChild(div1)
+        body.appendChild(div2)
+        body.appendChild(div3)
+
+        const texto = document.createTextNode('Antes...')
+        div3.insertBefore(texto, div3.childNodes[0])
+
+        const div4 = div3.cloneNode(true)//clona um elemento. True se quer clonar os filhos tb, false para não
+        body.appendChild(div4)
+        body.removeChild(div3) //remover elemento
     </script>
 </body>
 
