--- a/CursoJS/exercicios-js/dom/selecionandoElementos3.html
+++ b/CursoJS/exercicios-js/dom/selecionandoElementos3.html
@@ -31,9 +31,10 @@
         <button>Pesquisar</button>
     </form>
     <script>
-        console.log(document.forms)
-        console.log(document.forms[0])
-        console.log(document.getElementsByName('pesquisa'))
+        console.log(document.forms) //vai trazer um coleção de formularios
+        console.log(document.forms[0]) //vai trazer o primeiro elemento do formulario
+        console.log(document.getElementsByName('pesquisa')) //traz um node list
+        console.log(document.getElementsByTagName('form')) //traz um HTML coletion
         console.log(document.pesquisa)
         console.log(document.pesquisa.q)
         document.pesquisa.q.value = 'Linux Brasil'
