--- a/CursoJS/exercicios-js/jquery/plugin2.html
+++ b/CursoJS/exercicios-js/jquery/plugin2.html
@@ -5,14 +5,19 @@
     <meta charset='UTF-8'>
     <title>Plugin #02</title>
     <link rel='stylesheet' href='css/temporizador.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <script src='js/jquery.js'></script>
 </head>
 
 <body>
-    <h1>Plugin #02 - Temporizador</h1>
+    <h1>Temporizador</h1>
     <div></div>
     <script src="js/temporizador.js"></script>
     <script>
-        // ...
+        $('div').temporizador({
+            horario: '22:35:45'
+        }).hide().fadeIn(3000)
     </script>
 </body>
