--- a/CursoJS/exercicios-js/bootstrap/exercicios/paginas/fundamentos.html
+++ b/CursoJS/exercicios-js/bootstrap/exercicios/paginas/fundamentos.html
@@ -1,5 +1,19 @@
 <!-- Título (jumbotron) -->
+<div class="jumbotron p-4 my-1">
+    <h1 class="display-4">Fundamentos</h1>
+    <p class="lead m-1">Alguns recursos importantes do Bootstrap.</p>
+</div>
+
 <!-- Breadcrumb -->
+<nav class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="#bemVindo.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Fundamentos</li>
+    </ol>
+</nav>
+
 
 <div class="exercicio">
     <h1>1. Tipografia -
@@ -25,6 +39,9 @@
     <hr>
 
     <!-- Espaços -->
+    <div class="mb-5">1</div>
+    <div class="py-5">2</div>
+    <div class="pt-5">3</div>
 
     <h1 class="mt-5">3. Cores -
         <small>
@@ -34,6 +51,21 @@
     <hr>
 
     <!-- Cores -->
+    <div class="my-1 p-3 bg-primary text-light">1</div>
+    <div class="my-1 p-3 bg-danger text-white">2</div>
+    <div class="my-1 p-3 bg-warning text-success">3</div>
+
+    <p class="text-primary">.text-primary</p>
+    <p class="text-secondary">.text-secondary</p>
+    <p class="text-success">.text-success</p>
+    <p class="text-danger">.text-danger</p>
+    <p class="text-warning">.text-warning</p>
+    <p class="text-info">.text-info</p>
+    <p class="text-light bg-dark">.text-light</p>
+    <p class="text-dark">.text-dark</p>
+    <p class="text-muted">.text-muted</p>
+    <p class="text-white bg-dark">.text-white</p>
+
 
     <h1 class="mt-5">4. Flex -
         <small>
@@ -43,6 +75,12 @@
     <hr>
 
     <!-- Flex -->
+    <div class="d-sm-flex flex-column-reverse p-2">
+        <div class="align-self-end">1</div>
+        <div class="align-self-center">2</div>
+        <div class="align-self-start">3</div>
+    </div>
+
 
     <h1 class="mt-5">5. Imagens -
         <small>
@@ -52,6 +90,16 @@
     <hr>
 
     <!-- Imagens -->
+    <div class="p-2">
+        <img src="/imgs/img1.png" alt="Imagem 1" 
+            class="mx-auto d-block" width="400">
+        <img src="/imgs/img1.png" alt="Imagem 1" 
+            class="img-thumbnail" width="400">
+        <img src="/imgs/img1.png" alt="Imagem 1" 
+            class="img-fluid" width="400">
+    </div>
+
+
 
     <h1 class="mt-5">6. Float -
         <small>
@@ -61,6 +109,11 @@
     <hr>
 
     <!-- Float -->
+    <div class="my-1 p-3 float-left">1</div>
+    <div class="my-1 p-3 float-right">2</div>
+    <div class="my-1 p-3 float-lg-right float-xl-left">3</div>
+
+
 </div>
 
 <style>
