--- a/CursoJS/exercicios-js/bootstrap/exercicios/paginas/formulario.html
+++ b/CursoJS/exercicios-js/bootstrap/exercicios/paginas/formulario.html
@@ -19,3 +19,57 @@
 </p>
 
 <!-- Formulário -->
+<div class="card">
+    <div class="card-header">
+        <h5 class="mb-0 text-center">Formulário</h5>
+    </div>
+    <div class="card-body">
+        <form action="" class="container-fluid">
+            <div class="form-row">
+                <div class="col-12 col-md-6">
+                    <div class="form-group">
+                        <label for="nome">Nome</label>
+                        <input type="text" class="form-control" id="nome" placeholder="Informe seu nome">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="col-12 col-md-6">
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">@</span>
+                            </div>
+                            <input type="email" id="email" placeholder="Informe seu e-mail" class="form-control">
+                        </div>
+                        <small class="form-text text-muted">Enviaremos um email para confirmar seu cadastro</small>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-6">
+                <div class="form-group">
+                    <label for="linguagemPreferida">Linguagem</label>
+                    <select id="linguagemPreferida" class="form-control">
+                        <option value="">Selecione</option>
+                        <option>JS</option>
+                        <option>Java</option>
+                        <option>Python</option>
+                        <option>Ruby</option>
+                        <option>Outra</option>
+                    </select>
+                </div>
+            </div>
+            <hr>
+
+            <div class="form-row mb-0">
+                <div class="col-12">
+                    <button class="btn btn-primary" type="submit">Salvar</button>
+                    <button class="btn btn-secondary" type="reset">Cancelar</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
